@@ -1,5 +1,6 @@
 [1.1.0] (Unreleased)
 - Removed BoomEffect.remove method. Effects must be removed through their channels, which has always been the intended behavior.
+- Added BoomChannel.getEffects method.
 
 [1.0.0] (February 2023)
 - BREAKING: Added generic methods "addEffect" to BoomChannel, and removed specialized ones such as "addReverb".
